fix overflow

--- a/style.css
+++ b/style.css
@@ -13,6 +13,21 @@
   --dark-bg-secondary: #444444;
 }
 
+::-webkit-scrollbar {
+  width: 1vw;
+  background-color: var(--dark-bg-primary);
+}
+
+::-webkit-scrollbar-button {
+  background-color: var(--dark-bg-primary);
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark-bg-secondary);
+  border-radius: 1vw;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -48,9 +63,11 @@ body {
 }
 
 .content {
-  width: 100vw;
+  width: 100%;
   display: none;
   border-radius: 0px;
+  flex-direction: column;
+  margin: 0px;
 }
 
 .nav {
@@ -60,7 +77,7 @@ body {
   background-color: var(--dark-bg-secondary);
   align-items: center;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   top: 0px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -439,4 +456,11 @@ body {
 }
 
 .main-content {
+  width: 100%;
+  color: wheat;
+  margin-top: 57px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
